--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,27 +1,27 @@
 html {
-  background-color: #000000 !important;
+  background-color: #ffffff !important;
   color: inherit;
 }
 
 .thumb-img {
-  border-color: #000000 !important;
+  border-color: #ffffff !important;
 }
 
 #loupeContainer div.background {
-  background-color: #000000 !important;
+  background-color: #ffffff !important;
   color: inherit;
 }
 
 header div.background {
-  background-color: #000000 !important;
+  background-color: #ffffff !important;
   color: inherit;
 }
 
 .custom-colorable {
-  fill: #A0A0A0 !important;
+  fill: #000000 !important;
 }
 
 body {
-  background-color: #000000 !important;
+  background-color: #ffffff !important;
   color: #828282 !important;
 }
