--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
     background: white;
     min-width: 200px;
     text-align: center;
+    padding-right: 400px;
+    padding-left: 400px;
 
 }
 .eyes {
