--- a/text.css
+++ b/text.css
@@ -26,61 +26,67 @@
             }
 
 p {
-      font-family: "HiraginoKaku";
+      font-family: "Graphik";
       font-size: 18px;
       font-weight: 1000;
-      color: black;
+      color: rgb(36, 42, 165);
       min-width: 200px;
       text-align: left
     }
 h1 {
-      font-family: "HiraginoKaku";
-      font-size: 38px;
-      font-weight: 700;
-      color: rgb(255, 18, 18);
+      font-family: "Graphik";
+      font-size: 28px;
+      font-weight: 1000;
+      color: rgb(36, 42, 165);
       min-width: 200px;
       text-align: left
     }
 a {
-      font-family: "HiraginoKaku";
+      font-family: "Graphik";
       font-size: 18px;
-      font-weight: 400;
-      color: black;
+      font-weight: 1000;
+      color: rgb(36, 42, 165);
       min-width: 200px;
       text-align: left;
     }
 b {
-      font-family: "HiraginoKaku";
+      font-family: "Graphik";
       font-size: 18px;
-      font-weight: 300;
-      color: black;
+      font-weight: 1000;
+      color: rgb(36, 42, 165);
       min-width: 200px;
       text-align: left
     }
 h2 {
-      font-family: "HiraginoKaku";
+      font-family: "Graphik";
       font-size: 18px;
-      font-weight: 400;
-      color: black;
+      font-weight: 1000;
+      color: rgb(36, 42, 165);
       min-width: 200px;
       text-align: left;
       margin : 0
     }
 h3 {
-      font-family: "HiraginoKaku";
+      font-family: "Graphik";
       font-size: 18px;
-      font-weight: 400;
+      font-weight: 1000;
       color: rgb(45, 153, 90);
       min-width: 200px;
       text-align: left
     }
 body {
-      background-color: white;
+      background-color: rgb(255, 255, 255);
       padding-left: 20px;
       padding-right: 850px;
 
 
     }
+    a:hover {
+      color: rgb(0, 82, 0);
+      }
+      .module {
+        cursor: url('path-to-image.png'), auto;	
+      }
 marquee {
       font-family: "Neue Machina";
       color: red;
