--- a/text.css
+++ b/text.css
@@ -24,106 +24,67 @@
           font-family: HiraginoKaku;
           src: url(fonts/HiraginoKakuGothicProW6/HiraginoKaku.otf);
             }
-
-p {
-      font-family: "HiraginoKaku";
-      font-size: 18px;
-      font-weight: 1000;
-      color: black;
-      min-width: 200px;
-      text-align: left
-    }
-h1 {
-      font-family: "HiraginoKaku";
-      font-size: 38px;
-      font-weight: 700;
-      color: rgb(255, 18, 18);
-      min-width: 200px;
-      text-align: left
-    }
-a {
-      font-family: "HiraginoKaku";
-      font-size: 18px;
-      font-weight: 400;
-      color: black;
-      min-width: 200px;
-      text-align: left;
-    }
-b {
-      font-family: "HiraginoKaku";
-      font-size: 18px;
-      font-weight: 300;
-      color: black;
-      min-width: 200px;
-      text-align: left
-    }
-h2 {
-      font-family: "HiraginoKaku";
-      font-size: 18px;
-      font-weight: 400;
-      color: black;
-      min-width: 200px;
-      text-align: left;
-      margin : 0
-    }
-h3 {
-      font-family: "HiraginoKaku";
-      font-size: 18px;
-      font-weight: 400;
-      color: rgb(45, 153, 90);
-      min-width: 200px;
-      text-align: left
-    }
-body {
-      background-color: white;
-      padding-left: 20px;
-      padding-right: 850px;
-
-
-    }
-marquee {
-      font-family: "Neue Machina";
-      color: red;
-      text-align: center;
-      padding-left: 20px;
-      font-size: 30px;
-    }
-/*** Works on common browsers ***/
-::selection {
-  background-color: #352e7e;
-  color: #fff;
-}
-
-/*** Mozilla based browsers ***/
-::-moz-selection {
-  background-color: #352e7e;
-  color: #fff;
-}
-
-/***For Other Browsers ***/
-::-o-selection {
-  background-color: #352e7e;
-  color: #fff;
-}
-
-::-ms-selection {
-  background-color: #352e7e;
-  color: #fff;
-}
-
-/*** For Webkit ***/
-::-webkit-selection {
-  background-color: #352e7e;
-  color: #fff;
-}
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-.cover {
-  object-fit: cover;
-  width: 50px;
-  height: 100px;
-}
+            p {
+              font-family: "Graphik";
+              font-size: 18px;
+              font-weight: 1000;
+              color: black;
+              min-width: 200px;
+              text-align: left
+            }
+        h1 {
+              font-family: "Graphik";
+              font-size: 28px;
+              font-weight: 1000;
+              color: black;
+              min-width: 200px;
+              text-align: left
+            }
+        a {
+              font-family: "Graphik";
+              font-size: 18px;
+              font-weight: 1000;
+              color: black;
+              min-width: 200px;
+              text-align: left;
+            }
+        b {
+              font-family: "Graphik";
+              font-size: 18px;
+              font-weight: 1000;
+              color: black;
+              min-width: 200px;
+              text-align: left
+            }
+        h2 {
+              font-family: "Graphik";
+              font-size: 18px;
+              font-weight: 1000;
+              color: black;
+              min-width: 200px;
+              text-align: left;
+              margin : 0
+            }
+        h3 {
+              font-family: "Graphik";
+              font-size: 18px;
+              font-weight: 1000;
+              color: rgb(45, 153, 90);
+              min-width: 200px;
+              text-align: left
+            }
+        body {
+              background-color: white;
+              background-color: rgb(255, 255, 255);
+              padding-left: 20px;
+              padding-right: 850px;
+              padding-top: 25px;
+        
+        
+            }
+            a:hover {
+              color: rgb(0, 82, 0);
+              }
+              .module {
+                cursor: url('path-to-image.png'), auto;	
+              }
