--- a/text.css
+++ b/text.css
@@ -37,15 +37,15 @@
               font-size: 28px;
               font-weight: 1000;
               color: black;
-              min-width: 200px;
-              text-align: left
+              text-align: left;
+              width: 100%;
+              white-space: nowrap; 
             }
+    
         a {
               font-family: "Graphik";
               font-size: 18px;
-              font-weight: 1000;
-              color: black;
-              min-width: 200px;
+              color: rgb(60, 161, 55);
               text-align: left;
             }
         b {
@@ -61,18 +61,22 @@
               font-size: 18px;
               font-weight: 1000;
               color: black;
-              min-width: 200px;
               text-align: left;
-              margin : 0
+              margin : 0;
+              width: 100%;
+              white-space: normal;
+              
+
             }
         h3 {
-              font-family: "Graphik";
-              font-size: 18px;
-              font-weight: 1000;
-              color: rgb(45, 153, 90);
-              min-width: 200px;
-              text-align: left
-            }
+          font-family: "Graphik";
+          font-size: 18px;
+          font-weight: 1000;
+          color: black;
+          text-align: left;
+          margin : 0;
+          width: 100%;
+        }
         body {
               background-color: white;
               background-color: rgb(255, 255, 255);
