--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Amarante&family=Jacquard+12&family=Jacquard+24&family=Young+Serif&display=swap');
+
 @tailwind base;
   @tailwind components;
   @tailwind utilities;
