--- a/src/app/blog/[slug]/blogPost.css
+++ b/src/app/blog/[slug]/blogPost.css
@@ -66,3 +66,11 @@
 .blog-content ol:not(:last-child) {
     margin-bottom: 1.5em;
 }
+
+/* Add these styles for the header image */
+.blog-header-image {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+  margin-bottom: 2rem;
+}
